# OpenGLRenderer

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  compile_flags.txt
docs/: development-plan.md
shaders/: lit.frag  lit.vert  triangle.frag  triangle.vert
src/: main.cpp
src/Core/: Application.cpp  Application.h  ImGuiLayer.cpp  ImGuiLayer.h  Window.cpp  Window.h
src/Renderer/: Buffer.cpp  Buffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
src/Scene/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  GameObject.cpp  GameObject.h  RenderComponent.cpp  RenderComponent.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
